@@ -152,7 +152,8 @@ local defaults = {
     seasons = seasons,
     maxlevel = 80,
     databaseCheckMessageFreq = 10,
-    enablePreviousSeason = {enabled = true, season = "Dragonflight-4"}
+    enablePreviousSeason = {enabled = true, season = "Dragonflight-4"},
+    soundOnNewGroupMember = true
 }
 
 KeyCount.defaults = defaults
