@@ -1,5 +1,4 @@
-- Updated dungeon abbreviations
-- Fixed player lookup bug - you can now filter by season
+- Added option to remove sound
 
 v0.10 changelog:
 - Updated for The War Within with new dungeon settings
@@ -9,3 +8,5 @@ v0.10 changelog:
 - Added sound/message notification when a player that you have data for joins your group
 - Fixed bug where a message was shown twice after clean install
 - Key level colors updated to match new dungeon scaling
+- Updated dungeon abbreviations
+- Fixed player lookup bug - you can now filter by season
